[gd_scene load_steps=21 format=1]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Flabby.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Cane.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/generate.gd" type="Script" id=12]
[ext_resource path="res://assets/font160.fnt" type="BitmapFont" id=13]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]

resource/name = "BackAnimated"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 95.9803

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 47.0437, 8.03563 )
b = Vector2( -2.87094, 6.81494 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 896.13, 7.55271 )
b = Vector2( -89.6699, 4.53803 )

[node name="GameNode" type="Node2D"]

z/z = 2
script/script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnimated = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackAnimated"

[node name="Sprite1" type="Sprite" parent="AnimationPlayer"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="AnimationPlayer"]

transform/pos = Vector2( 1026, -3.79468 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Flabby" type="RigidBody2D" parent="."]

transform/pos = Vector2( 301.362, 867.837 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 23.6207, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FlabbyAnimated" type="AnimatedSprite" parent="Flabby"]

transform/scale = Vector2( 1.4, 1.4 )
frames = SubResource( 3 )
animation = "default"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flabby"]

transform/pos = Vector2( 23.6207, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="somVoar" type="StreamPlayer" parent="Flabby"]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Limits" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 19.5067, 0, 0, -2.40484, 63.7567, 1714.05 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 97.5228, 1.99026 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]

transform/pos = Vector2( 63.7567, 1714.05 )
transform/scale = Vector2( 19.5067, -2.40484 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limits"]

transform/pos = Vector2( 97.5228, 1.99026 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="canes" type="Node2D" parent="."]

editor/display_folded = true
z/z = 2
z/relative = false

[node name="Cane" parent="canes" instance=ExtResource( 11 )]

editor/display_folded = true
transform/pos = Vector2( 1118.54, 812.243 )
z/z = 2

[node name="Replay" type="Timer" parent="canes/Cane"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Generation" type="Position2D" parent="canes"]

editor/display_folded = true
transform/pos = Vector2( 1132.1, 849.914 )
script/script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="canes/Generation"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Timer" type="Timer" parent="canes"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 11.0
margin/top = 8.0
margin/right = 1005.0
margin/bottom = 181.0
custom_fonts/font = ExtResource( 13 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="somHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="somScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="canes/Cane/Replay" to="." method="_on_Replay_timeout"]

[connection signal="timeout" from="canes/Generation/Timer" to="canes/Generation" method="_on_Timer_timeout"]

[connection signal="timeout" from="canes/Timer" to="." method="_on_Timer_timeout"]


